# Goverment-Project-Agent

./: .env.example  .gitignore  Makefile  README.md  README_zh.md  config.example.yaml  start.bat  start_web_agent.py
backend/: CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
backend/docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  AUTH_DESIGN.md  AUTH_TEST_DOCKER_GAP.md  AUTH_UPGRADE.md  BLOCKING_IO_DETECTION.md  CONFIGURATION.md  FILE_UPLOAD.md  GUARDRAILS.md  MCP_SERVER.md  MEMORY_SETTINGS_REVIEW.md  PATH_EXAMPLES.md  README.md  REPLAY_E2E.md  SANDBOX_MEMORY_PROFILING.md  SETUP.md  STREAMING.md  TITLE_GENERATION_IMPLEMENTATION.md  memory-settings-sample.json  plan_mode_usage.md  summarization.md  task_tool_improvements.md
backend/scripts/: build_fixture_from_jsonl.py  migrate_user_isolation.py  record_gateway.py  run_replay_gateway.py
backend/tests/: _replay_fixture.py  conftest.py  replay_provider.py  test_agent_base_facade.py  test_aio_sandbox_local_backend.py  test_aio_sandbox_provider.py  test_app_config_reload.py  test_auth.py  test_auth_middleware.py  test_auth_type_system.py  test_channel_service_env.py  test_channels.py  test_check_script.py  test_checkpointer.py  test_client.py  test_client_e2e.py  test_custom_agent.py  test_deferred_tool_crosscontext.py  test_detect_uv_extras.py  test_dev_entrypoint.py  test_doctor.py  test_docx_evidence_images.py  test_export_image_selection.py  test_exports.py  test_frontend_backend_contract.py  test_gateway_lifespan_shutdown.py  test_gateway_run_drain_shutdown.py  test_internal_auth.py  (+84 more)
(+211 files in other folders)
