[project]
name = "agent-base-backend"
version = "0.1.0"
description = "Agent Base gateway and runtime application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.27",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph-sdk>=0.1.51",
    "bcrypt>=4.0.0",
    "pyjwt>=2.9.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
postgres = ["deerflow-harness[postgres]"]
channels = [
    "dingtalk-stream>=0.24.3",
    "lark-oapi>=1.4.0",
    "wecom-aibot-python-sdk>=0.1.6",
]

[dependency-groups]
dev = [
    "blockbuster>=1.5.26,<1.6",
    "prompt-toolkit>=3.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
markers = [
    "no_auto_user: disable the conftest autouse contextvar fixture for this test",
    "allow_blocking_io: opt out of the strict Blockbuster gate in tests/blocking_io/",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.uv.workspace]
members = ["packages/harness"]

[tool.uv.sources]
deerflow-harness = { workspace = true }
